--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">SootheAndroid</string>
     <string name="title_activity_welcome">Welcome</string>
     <string name="title_activity_login">Login</string>
+    <string name="title_activity_home">Home</string>
 </resources>
